--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,24 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+* {
+  box-sizing: border-box; /*faz com que a largura e altura de um elemento incluam o preenchimento (padding) e a borda (border) no cálculo, resultando em um layout mais previsível*/
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+body {
+  background-color: rgb(26, 26, 26);
 }
 
 .card {
-  padding: 2em;
+  color: white;
+  font-family: sans-serif;
+  border: 1px solid white; /*Borda branca pequena*/
+  border-radius: 10px;
+  text-align: center;
+  width: 20%;
+  margin: 0 auto; /* margin 0 pra cima e pra baixo e auto pra esquerda e pra direita, isso faz a div ficar centralizada*/
+  padding: 10px;
+  box-shadow: 5px 6px 0 white; /*sombra da caixa*/
 }
 
-.read-the-docs {
-  color: #888;
+.card img {
+  width: 100%; /* largura de 100% da imagem*/
+  border-radius: 8px; /* Cantos arredondados */
 }
